# simplecalculator

./: .gitignore  Cargo.toml  NOTICE  jest.config.js  nodemon.json  package.json  tsconfig.json
.github/workflows/: Basic.yml
__tests__/: integration.js  integration.ts
__tests__/src/query/: compute.ts
examples/: schema.rs
src/: calculations_utils.rs  contract.rs  lib.rs  msg.rs  state.rs  utils.rs  viewing_key.rs
tests/: integration.ts  integration_old.js  utils.js
